# aoc-2024

./: .gitignore  Cargo.toml  tasks.py
benchmark/: Cargo.toml
benchmark/benches/: criterion.rs  iai.rs
day01/: Cargo.toml  problem.md
day01/src/: lib.rs
day02/: Cargo.toml  problem.md
day02/src/: lib.rs
day03/: problem.md
day03/src/: lib.rs
day04/: Cargo.toml
day04/src/: lib.rs
day05/: Cargo.toml
day05/src/: lib.rs
day06/: Cargo.toml
day06/src/: lib.rs
day07/src/: lib.rs
day08/src/: lib.rs
day09/: Cargo.toml
day09/src/: lib.rs
day10/: Cargo.toml
day10/src/: lib.rs
day11/: Cargo.toml
day11/src/: lib.rs
day12/: Cargo.toml
day12/src/: lib.rs
day13/src/: lib.rs  main.rs  part1.rs  part2.rs
day14/: Cargo.toml
day14/src/: lib.rs  main.rs
day15/: Cargo.toml
day15/src/: lib.rs  main.rs
day16/: Cargo.toml
day16/src/: lib.rs  main.rs
day17/: Cargo.toml  solver.py
day17/src/: lib.rs  main.rs
day18/: Cargo.toml
day18/src/: lib.rs  main.rs
day19/: Cargo.toml
day19/src/: lib.rs  main.rs
day20/: Cargo.toml
day20/src/: lib.rs  main.rs
day21/: Cargo.toml
day21/src/: lib.rs  main.rs
day22/: Cargo.toml
day22/src/: lib.rs  main.rs
day23/: Cargo.toml
day23/src/: lib.rs  main.rs
day24/: .gitignore  part2.py
day24/src/: lib.rs  main.rs
day25/src/: lib.rs  main.rs
