[workspace]
members = [ "benchmark", "day01", "day02", "day03", "day04", "day05", "day06" ]
resolver = "2"

[workspace.metadata.day01]
start_time = 2024-12-01T15:20:49.099004
completion_time = 2024-12-01T15:25:25.635983

[workspace.metadata.day02]
start_time = 2024-12-02T16:02:22.140166
completion_time = 2024-12-02T16:08:12.318737

[workspace.metadata.day03]
start_time = 2024-12-03T11:28:32.154194
completion_time = 2024-12-03T11:33:10.068000

[workspace.metadata.day04]
start_time = 2024-12-04T11:20:11.268931
completion_time = 2024-12-04T11:44:36.209563

[workspace.metadata.day05]
start_time = 2024-12-05T10:28:42.122467
completion_time = 2024-12-05T10:45:16.505316

[workspace.metadata.day06]
start_time = 2024-12-06T14:49:00.318331
completion_time = 2024-12-06T15:05:12.300362
