[workspace]
members = [ "benchmark", "day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09", "day10", "day11", "day12", "day13", "day14", "day15", "day16", "day17", "day18", "day19", "day20", "day21", "day22" ]
resolver = "2"

[workspace.metadata.day01]
start_time = 2024-12-01T15:20:49.099004
completion_time = 2024-12-01T15:25:25.635983

[workspace.metadata.day02]
start_time = 2024-12-02T16:02:22.140166
completion_time = 2024-12-02T16:08:12.318737

[workspace.metadata.day03]
start_time = 2024-12-03T11:28:32.154194
completion_time = 2024-12-03T11:33:10.068000

[workspace.metadata.day04]
start_time = 2024-12-04T11:20:11.268931
completion_time = 2024-12-04T11:44:36.209563

[workspace.metadata.day05]
start_time = 2024-12-05T10:28:42.122467
completion_time = 2024-12-05T10:45:16.505316

[workspace.metadata.day06]
start_time = 2024-12-06T14:49:00.318331
completion_time = 2024-12-06T15:05:12.300362

[workspace.metadata.day07]
start_time = 2024-12-07T12:23:30.417774
completion_time = 2024-12-07T12:30:21.423764

[workspace.metadata.day08]
start_time = 2024-12-08T13:25:02.127485
completion_time = 2024-12-08T13:42:00.340494

[workspace.metadata.day09]
start_time = 2024-12-09T13:21:18.350880
completion_time = 2024-12-09T13:54:38.749132

[workspace.metadata.day10]
start_time = 2024-12-10T08:31:12.735562
completion_time = 2024-12-10T08:41:40.892821

[workspace.metadata.day11]
start_time = 2024-12-11T12:24:42.823061
completion_time = 2024-12-11T12:35:03.448402

[workspace.metadata.day12]
start_time = 2024-12-12T18:19:34.566307
completion_time = 2024-12-13T03:20:35.634058

[workspace.metadata.day13]
start_time = 2024-12-13T13:59:22.859839
completion_time = 2024-12-13T14:51:21.204053

[workspace.metadata.day14]
start_time = 2024-12-14T12:26:56.162133
completion_time = 2024-12-14T13:02:43.624294

[workspace.metadata.day15]
start_time = 2024-12-15T12:57:24.224952
completion_time = 2024-12-15T13:32:08.876653

[workspace.metadata.day16]
start_time = 2024-12-16T14:23:03.626715
completion_time = 2024-12-16T14:36:46.330803

[workspace.metadata.day17]
start_time = 2024-12-17T07:59:13.942177
completion_time = 2024-12-17T09:01:38.559435

[workspace.metadata.day18]
start_time = 2024-12-18T13:52:19.914042
completion_time = 2024-12-18T14:05:43.101765

[workspace.metadata.day19]
start_time = 2024-12-19T11:19:37.399297
completion_time = 2024-12-19T11:28:25.985535

[workspace.metadata.day20]
start_time = 2024-12-20T13:13:49.463987
completion_time = 2024-12-20T15:03:33.637398

[workspace.metadata.day21]
start_time = 2024-12-21T14:18:17.022935

[workspace.metadata.day22]
start_time = 2024-12-22T20:32:31.093843
completion_time = 2024-12-22T21:27:13.571782
